Fix bug in Navbar expand buttons on Safari

--- a/src/components/common/Navbar.module.scss
+++ b/src/components/common/Navbar.module.scss
@@ -1,7 +1,7 @@
 $not-focused: transparentize($color: $natural-white, $amount: 0.25);
 
 .naviLink {
-    font-size: 16px;
+    font-size: 1rem;
     font-family: $font-heading;
     font-weight: 700;
     text-transform: uppercase;
@@ -22,8 +22,8 @@ $not-focused: transparentize($color: $natural-white, $amount: 0.25);
     color: $not-focused;
 
     svg {
-        width: 100%;
-        height: 100%;
+        width: 1.8rem;
+        height: 1.8rem;
         margin: auto;
     }
 }
@@ -147,6 +147,11 @@ $not-focused: transparentize($color: $natural-white, $amount: 0.25);
         flex-basis: 75px;
         padding-inline: 1rem;
         border-left: solid 2px transparentize($color: $natural-white, $amount: 0.5);
+
+        svg {
+            width: 2rem;
+            height: 2rem;
+        }
     }
 
     .naviItem {
@@ -156,7 +161,7 @@ $not-focused: transparentize($color: $natural-white, $amount: 0.25);
 
     .naviLink {
         flex-grow: 1;
-        font-size: 28px;
+        font-size: 1.8rem;
         padding: 10px 20px;
     }
 
@@ -168,7 +173,7 @@ $not-focused: transparentize($color: $natural-white, $amount: 0.25);
     .subnavi {
 
         .naviLink {
-            font-size: 20px;
+            font-size: 1.3rem;
             font-weight: 500;
             text-transform: none;
             line-height: 1.6;
